# AI-Guardrails

./: .env.example  .gitignore  DEMO_SCRIPT.md  Hackathon_Guide.md  LICENSE  README.md  api-key-instructins.md  data-flow.mermaid  development-plan.md  execution-architecture.mermaid  output-schema.md  policy.yaml  pyproject.toml  streamlit_app.py
.claude/: settings.json
.streamlit/: config.toml
examples/: agentic_tools_demo.py  day1_checkpoint.py  day3_live.py  full_demo.py
guardrail/: __init__.py  backends.py  cache.py  config.py  dashboard.py  logger.py  middleware.py  normalizer.py  playground.py  policy.py  redactor.py  schema.py  verdict.py
guardrail/detectors/: patterns.py  tier1.py  tier2.py
guardrail/tools/: __init__.py  checks.py  middleware.py  mock_tools.py  registry.py  schema.py
scripts/: generate_sample_data.py
tests/: test_agentic_tools.py  test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py
